site.css
body {
	height: 100%;
	margin: 0;
	width: 100%;
}

h1 {
    font-size: 42px;
    font-family: 'Bungee Shade', cursive;
    color: #2f0433;
    margin-top: 21px;
    margin-bottom: 30px;
    line-height: 32px;
}

h3 {
	font-size: 24px;
    	line-height: 24px;
    	font-family: 'Bungee', cursive;
    	margin-top: 10px;
    	margin-bottom: 45px;
    	color: #201821;
}

.slider_container {
	margin: 0 auto;
}

.slider_slide {
	position: relative;
}

.slider_link {
	font-family: 'PT Sans'; sans-serif;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 100;
	font-size: 36px;
	color: #ffffff;
}

.h2 {
	font-size: 24px;
	font-family: 'PT Sans'; sans-serif;
}

.club_description {
	margin: 0 auto;
	width: 800px;
	font-family: 'PT Sans'; sans-serif;
	font-size: 16px;
}

.text_wrap {
	float: left;
}

.club_subtitle {
	margin-left: 320px;
	color: #624a65;
}

.clear{
	clear: both;
}

.club_border {
	border-bottom: 1px solid #f5f5f5;
        padding-bottom: 12px;
}

.club_titlestrong {
	font-weight: bold;
}

.club_details {
	margin-bottom: 10px;
}

.emoji {
	transition: transform 2s;
	position: fixed;
	top: 0;
	left: 0;
}

